results/SVCOMP/0-shot/log-astore_aload1-2024_03_18_23_31_08.txt
class astore_aload1 {
  //@ ensures boolean_array != null;
  //@ ensures byte_array != null;
  //@ ensures char_array != null;
  //@ ensures short_array != null;
  //@ ensures int_array != null;
  //@ ensures long_array != null;
  //@ ensures double_array != null;
  //@ ensures float_array != null;
  public static void func() {
    int size = 10;
    boolean[] boolean_array = new boolean[size];
    byte[] byte_array = new byte[size];
    char[] char_array = new char[size];
    short[] short_array = new short[size];
    int[] int_array = new int[size];
    long[] long_array = new long[size];
    double[] double_array = new double[size];
    float[] float_array = new float[size];

    //@ loop_invariant (\forall int j; 0 <= j && j < i; boolean_array[j] == (j % 2 == 0));
    //@ loop_invariant (\forall int j; 0 <= j && j < i; byte_array[j] == (byte) j);
    //@ loop_invariant (\forall int j; 0 <= j && j < i; char_array[j] == (char) j);
    //@ loop_invariant (\forall int j; 0 <= j && j < i; short_array[j] == (short) j);
    //@ loop_invariant (\forall int j; 0 <= j && j < i; int_array[j] == j);
    //@ loop_invariant (\forall int j; 0 <= j && j < i; long_array[j] == (long) j);
    //@ loop_invariant (\forall int j; 0 <= j && j < i; double_array[j] == (double) j);
    //@ loop_invariant (\forall int j; 0 <= j && j < i; float_array[j] == (float) j);
    for (int i = 0; i < size; i++) {
      boolean tmp = false;
      if (i % 2 == 0) {
        tmp = true;
      }
      boolean_array[i] = tmp;
      byte_array[i] = (byte) i;
      char_array[i] = (char) i;
      short_array[i] = (short) i;
      int_array[i] = i;
      long_array[i] = (long) i;
      double_array[i] = (double) i;
      float_array[i] = (float) i;
    }

    //@ assert boolean_array.length == 10;
    //@ assert boolean_array[0];
    //@ assert !boolean_array[1];
    //@ assert boolean_array[2];
    //@ assert !boolean_array[3];
    //@ assert boolean_array[4];
    //@ assert !boolean_array[5];
    //@ assert boolean_array[6];
    //@ assert !boolean_array[7];
    //@ assert boolean_array[8];
    //@ assert !boolean_array[9];
    //@ assert byte_array.length == 10;
    //@ assert byte_array[0] == (byte) 0;
    //@ assert byte_array[1] == (byte) 1;
    //@ assert byte_array[2] == (byte) 2;
    //@ assert byte_array[3] == (byte) 3;
    //@ assert byte_array[4] == (byte) 4;
    //@ assert byte_array[5] == (byte) 5;
    //@ assert byte_array[6] == (byte) 6;
    //@ assert byte_array[7] == (byte) 7;
    //@ assert byte_array[8] == (byte) 8;
    //@ assert byte_array[9] == (byte) 9;
    //@ assert short_array.length == 10;
    //@ assert short_array[0] == (short) 0;
    //@ assert short_array[1] == (short) 1;
    //@ assert short_array[2] == (short) 2;
    //@ assert short_array[3] == (short) 3;
    //@ assert short_array[4] == (short) 4;
    //@ assert short_array[5] == (short) 5;
    //@ assert short_array[6] == (short) 6;
    //@ assert short_array[7] == (short) 7;
    //@ assert short_array[8] == (short) 8;
    //@ assert short_array[9] == (short) 9;
    //@ assert int_array.length == 10;
    //@ assert int_array[0] == 0;
    //@ assert int_array[1] == 1;
    //@ assert int_array[2] == 2;
    //@ assert int_array[3] == 3;
    //@ assert int_array[4] == 4;
    //@ assert int_array[5] == 5;
    //@ assert int_array[6] == 6;
    //@ assert int_array[7] == 7;
    //@ assert int_array[8] == 8;
    //@ assert int_array[9] == 9;
    //@ assert long_array.length == 10;
    //@ assert long_array[0] == 0L;
    //@ assert long_array[1] == 1L;
    //@ assert long_array[2] == 2L;
    //@ assert long_array[3] == 3L;
    //@ assert long_array[4] == 4L;
    //@ assert long_array[5] == 5L;
    //@ assert long_array[6] == 6L;
    //@ assert long_array[7] == 7L;
    //@ assert long_array[8] == 8L;
    //@ assert long_array[9] == 9L;
    //@ assert char_array.length == 10;
    //@ assert char_array[0] == (char) 0;
    //@ assert char_array[1] == (char) 1;
    //@ assert char_array[2] == (char) 2;
    //@ assert char_array[3] == (char) 3;
    //@ assert char_array[4] == (char) 4;
    //@ assert char_array[5] == (char) 5;
    //@ assert char_array[6] == (char) 6;
    //@ assert char_array[7] == (char) 7;
    //@ assert char_array[8] == (char) 8;
    //@ assert char_array[9] == (char) 9;
    //@ assert double_array.length == 10;
    //@ assert (int) double_array[0] == 0;
    //@ assert (int) double_array[1] == 1;
    //@ assert (int) double_array[2] == 2;
    //@ assert (int) double_array[3] == 3;
    //@ assert (int) double_array[4] == 4;
    //@ assert (int) double_array[5] == 5;
    //@ assert (int) double_array[6] == 6;
    //@ assert (int) double_array[7] == 7;
    //@ assert (int) double_array[8] == 8;
    //@ assert (int) double_array[9] == 9;
  }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:2: error: cannot find symbol
  //@ ensures boolean_array != null;
              ^
  symbol:   variable boolean_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: cannot find symbol
  //@ ensures byte_array != null;
              ^
  symbol:   variable byte_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:4: error: cannot find symbol
  //@ ensures char_array != null;
              ^
  symbol:   variable char_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:5: error: cannot find symbol
  //@ ensures short_array != null;
              ^
  symbol:   variable short_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:6: error: cannot find symbol
  //@ ensures int_array != null;
              ^
  symbol:   variable int_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:7: error: cannot find symbol
  //@ ensures long_array != null;
              ^
  symbol:   variable long_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:8: error: cannot find symbol
  //@ ensures double_array != null;
              ^
  symbol:   variable double_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:9: error: cannot find symbol
  //@ ensures float_array != null;
              ^
  symbol:   variable float_array
  location: class astore_aload1
8 errors

